[gd_scene load_steps=3 format=3 uid="uid://bfa43a2yl6n3p"]

[ext_resource type="Script" path="res://gui/Settings.gd" id="1_0ux04"]

[sub_resource type="LabelSettings" id="LabelSettings_l32oa"]
font_size = 32

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0ux04")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ToMainMenu" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Menu Główne
"

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Ustawienia"
label_settings = SubResource("LabelSettings_l32oa")
horizontal_alignment = 1

[node name="TabContainer" type="TabContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Graphics" type="VBoxContainer" parent="VBoxContainer/TabContainer"]
layout_mode = 2

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer/TabContainer/Graphics"]
layout_mode = 2

[node name="EnablePointShadows" type="CheckBox" parent="VBoxContainer/TabContainer/Graphics/HBoxContainer4"]
layout_mode = 2
button_pressed = true

[node name="Label" type="Label" parent="VBoxContainer/TabContainer/Graphics/HBoxContainer4"]
layout_mode = 2
text = "Pokaż cienie świateł"

[node name="RendererDriver" type="HBoxContainer" parent="VBoxContainer/TabContainer/Graphics"]
layout_mode = 2

[node name="Slider" type="HSlider" parent="VBoxContainer/TabContainer/Graphics/RendererDriver"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
size_flags_horizontal = 8
max_value = 2.0
value = 1.0

[node name="Label" type="Label" parent="VBoxContainer/TabContainer/Graphics/RendererDriver"]
layout_mode = 2
text = "Silnik renderowania (zmiana ustawienia wymaga restartu)
0 - 'opengl3', najniższej jakości, dobry dla starszego sprzętu
1 - 'mobile', średniej jakości
2 - 'forward_plus', wysoka jakość, wymaga lepszego i nowszego sprzętu)"

[node name="Sterowanie" type="VBoxContainer" parent="VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/TabContainer/Sterowanie"]
layout_mode = 2
text = "Czułość myszy"

[node name="MouseSensitivity" type="HBoxContainer" parent="VBoxContainer/TabContainer/Sterowanie"]
layout_mode = 2

[node name="Numerical" type="LineEdit" parent="VBoxContainer/TabContainer/Sterowanie/MouseSensitivity"]
layout_mode = 2
size_flags_horizontal = 0
text = "0"

[node name="Slider" type="HSlider" parent="VBoxContainer/TabContainer/Sterowanie/MouseSensitivity"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
size_flags_horizontal = 8
min_value = 1.0
value = 1.0

[node name="Monitoring" type="VBoxContainer" parent="VBoxContainer/TabContainer"]
visible = false
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/TabContainer/Monitoring"]
layout_mode = 2

[node name="EnableMonitoring" type="CheckBox" parent="VBoxContainer/TabContainer/Monitoring/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/TabContainer/Monitoring/HBoxContainer"]
layout_mode = 2
text = "Statystyki wydajności"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/TabContainer/Monitoring"]
layout_mode = 2

[node name="ShowPlayerPosition" type="CheckBox" parent="VBoxContainer/TabContainer/Monitoring/HBoxContainer2"]
layout_mode = 2
button_pressed = true

[node name="Label" type="Label" parent="VBoxContainer/TabContainer/Monitoring/HBoxContainer2"]
layout_mode = 2
text = "Pokaż pozycję gracza"

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer/TabContainer/Monitoring"]
layout_mode = 2

[node name="ShowPing" type="CheckBox" parent="VBoxContainer/TabContainer/Monitoring/HBoxContainer3"]
layout_mode = 2
button_pressed = true

[node name="Label" type="Label" parent="VBoxContainer/TabContainer/Monitoring/HBoxContainer3"]
layout_mode = 2
text = "Pokaż ping"

[connection signal="visibility_changed" from="." to="." method="Save"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ToMainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="toggled" from="VBoxContainer/TabContainer/Graphics/HBoxContainer4/EnablePointShadows" to="." method="_on_enable_point_shadows_toggled"]
[connection signal="value_changed" from="VBoxContainer/TabContainer/Graphics/RendererDriver/Slider" to="." method="_on_rendering_driver_value_changed"]
[connection signal="text_submitted" from="VBoxContainer/TabContainer/Sterowanie/MouseSensitivity/Numerical" to="." method="_on_mouse_sensitivity_numerical_changed"]
[connection signal="value_changed" from="VBoxContainer/TabContainer/Sterowanie/MouseSensitivity/Slider" to="." method="_on_mouse_sensitivity_slider_changed"]
[connection signal="toggled" from="VBoxContainer/TabContainer/Monitoring/HBoxContainer/EnableMonitoring" to="." method="_on_enable_monitoring_toggled"]
[connection signal="toggled" from="VBoxContainer/TabContainer/Monitoring/HBoxContainer2/ShowPlayerPosition" to="." method="_on_show_player_position_toggled"]
[connection signal="toggled" from="VBoxContainer/TabContainer/Monitoring/HBoxContainer3/ShowPing" to="." method="_on_show_ping_toggled"]
